# opendesk-migrate

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  docker.yml  frontend.yml
api/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_init.py
api/app/: __init__.py  celery_init.py  config.py  db.py  deps.py  logging.py  main.py
api/app/models/: __init__.py
api/app/routers/: __init__.py  audit.py  errors.py  health.py  jobs.py  oauth.py  tenants.py  users.py
api/app/schemas/: __init__.py
api/app/services/encryption/: __init__.py  cipher.py  cli.py
api/app/services/m365/: client.py  tokens.py
api/app/services/opendesk/: __init__.py  nextcloud.py  ox.py
api/app/services/storage/: __init__.py  base.py  local.py  s3.py
api/app/tasks/: __init__.py  calendar.py  contacts.py  discovery.py  dispatch.py  mail.py  maintenance.py  onedrive.py
api/tests/: __init__.py
api/tests/integration/: test_tenants_api.py
api/tests/unit/: test_cipher.py  test_config.py  test_local_storage.py  test_rate_limiter.py
docs/: ARCHITECTURE.md  COMPLIANCE.md  OPERATOR.md  RUNBOOK.md  SECURITY.md  USER-GUIDE.md
docs/ADR/: 0001-storage.md  0002-credentials.md
ops/postgres/initdb.d/: 01-extensions.sql
ops/prometheus/: prometheus.yml
scripts/: enable-ci.sh  reencrypt.py  seed_demo.py  smoke_cipher.py
tests/integration/fixtures/: README.md
web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/: LanguageSwitcher.tsx  Layout.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx
web/src/i18n/: i18n.ts
web/src/i18n/locales/: de.json  en.json  fr.json  it.json
web/src/lib/: api.ts  queries.ts  utils.ts
web/src/pages/: Audit.tsx  Dashboard.tsx  Jobs.tsx  Settings.tsx  TenantDetail.tsx  Tenants.tsx
